src/test/deca/syntax/valid/this_pars_obj.deca
// Description:
//    Programme testant la déclaration imbriquée d'une classe.
//
// Resultats:
//      Erreur
//
//
// Historique:
//    cree le 13/01/2023

{(this) + x}